# Heois

./: .gitignore  codemagic.yaml  exportOptions.plist
.github/workflow-files/: docker-build.yml
.github/workflows/: docker-build.yml
launchers/: ministar_ios_on_mac.sh
mobile/tauri/: README.md  package.json
mobile/tauri/src-tauri/: Cargo.toml  tauri.conf.json
mobile/tauri/src-tauri/capabilities/: default.json
mobile/tauri/src-tauri/src/: lib.rs  main.rs
mobile/tauri/web/: api.js  mobile.css  mobile.html  mobile.js  mobile_input_dock.js  mobile_picker.js  state.js  utils.js
