[package]
name = "ministar-mobile"
version = "1.0.0"
description = "MiniStar mobile shell"
authors = ["StarT"]
edition = "2021"

[lib]
name = "ministar_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
